# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/arch/__init__.py, modules/catalyst/arch/alpha.py,
  modules/catalyst/arch/amd64.py, modules/catalyst/arch/arm.py,
  modules/catalyst/arch/hppa.py, modules/catalyst/arch/ia64.py,
  modules/catalyst/arch/mips.py, modules/catalyst/arch/powerpc.py,
  modules/catalyst/arch/s390.py, modules/catalyst/arch/sh.py,
  modules/catalyst/arch/sparc.py, modules/catalyst/arch/x86.py,
  modules/generic_stage_target.py:
  Move subarch and maching maps to bottom of arch files, since the classes
  aren't defined yet at the top

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/arch/sh.py:
  Forgot the sh arch module

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/arch/alpha.py, modules/catalyst/arch/amd64.py,
  modules/catalyst/arch/arm.py, modules/catalyst/arch/hppa.py,
  modules/catalyst/arch/ia64.py, modules/catalyst/arch/mips.py,
  modules/catalyst/arch/powerpc.py, modules/catalyst/arch/s390.py,
  modules/catalyst/arch/sparc.py, modules/catalyst/arch/x86.py:
  Move subarch and machine map information to variables at top of each arch
  module and get rid of register() function

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> ChangeLog:
  Add catalyst.util.load_module() function
  Move arch modules under modules/catalyst/arch
  Add catalyst.arch.arches class to assist in loading arch modules
  Add .gitignore file for *.py[co]

  10 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst:
  Change __version__ to 2.99 for catalyst_3 branch

  09 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> TODO:
  Add note about metadata_overlay being default in 2.1.6

  09 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> AUTHORS:
  Updated the AUTHORS section and the header for the ChangeLog, to reflect